[package]
name = "rustack-events-core"
description = "EventBridge business logic for Rustack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustack-core = { workspace = true }
rustack-events-model = { workspace = true }
rustack-events-http = { workspace = true }
rustack-auth = { workspace = true }
http = { workspace = true }

async-trait = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
ipnet = "2.12"
