[package]
name = "rustack-iam-http"
description = "IAM HTTP service layer for Rustack (awsQuery protocol)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustack-iam-model = { workspace = true }
rustack-auth = { workspace = true }

hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }

bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

tracing = { workspace = true }
uuid = { workspace = true }

# http_body::Body trait
http-body = "1.0"

# awsQuery form-urlencoded parsing
form_urlencoded = { workspace = true }
