[package]
name = "rustack-lambda-core"
description = "Lambda business logic for Rustack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustack-core = { workspace = true }
rustack-lambda-model = { workspace = true }
rustack-lambda-http = { workspace = true }
rustack-auth = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
