[package]
name = "rustack-secretsmanager-core"
description = "Secrets Manager business logic for Rustack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rustack-core = { workspace = true }
rustack-secretsmanager-model = { workspace = true }
rustack-secretsmanager-http = { workspace = true }
rustack-auth = { workspace = true }
http = { workspace = true }

base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
